--- a/src/assets/scss/blk-design-system-pro/_example-pages.scss
+++ b/src/assets/scss/blk-design-system-pro/_example-pages.scss
@@ -266,10 +266,80 @@
     }
   }
 }
-
+// Style for the Landing Page
 .landing-page {
   overflow-x: hidden;
+  //animation squares
+  .squares {
+    animation: move-left-right 1s infinite;
+    @include linear-gradient($primary-states, $primary);
+    position: absolute;
+    transition: 0.5s ease-out;
+    overflow: hidden;
+    border-radius: 20%;
+    &.square1 {
+      animation: move-left-right 4s infinite;
+      height: 300px;
+      width: 300px;
+      opacity: 0.5;
+      left: 3%;
+      top: -21%;
+    }
 
+    &.square2 {
+      animation: move-left-right 6s infinite;
+      height: 400px;
+      width: 400px;
+      opacity: 0.4;
+      right: -5%;
+      top: -12%;
+    }
+
+    &.square3{
+      animation: move-left-right 5s infinite;
+      height: 200px;
+      width: 200px;
+      opacity: 0.1;
+      left: -5%;
+      bottom: 0%;
+    }
+
+    &.square4 {
+      animation: move-left-right 10s infinite;
+      height: 100px;
+      width: 100px;
+      opacity: 0.9;
+      right: 27%;
+      top: 70%;
+    }
+
+    &.square5 {
+      animation: move-left-right 6s infinite;
+      height: 250px;
+      width: 250px;
+      opacity: 0.1;
+      left: 32%;
+      bottom: 29%;
+    }
+
+    &.square6 {
+      animation: move-left-right 9s infinite;
+      left: 10%;
+      top: 25%;
+      height: 80px;
+      width: 80px;
+      opacity: 0.8;
+    }
+
+    &.square7 {
+      animation: move-left-right 3s infinite;
+      width: 300px;
+      height: 300px;
+      right: -5%;
+      bottom: 0%;
+      opacity: 0.1;
+    }
+  }
   .page-header {
 
     &::after {
@@ -293,7 +363,7 @@
       top: -50px;
     }
 
-    .squares {
+    .squareD {
       top: 50%;
       right: 18%;
       max-height: 200px;
