--- a/src/assets/scss/blk-design-system-pro/custom/_images.scss
+++ b/src/assets/scss/blk-design-system-pro/custom/_images.scss
@@ -11,3 +11,10 @@ img{
   margin-right: auto;
   margin-left: auto;
 }
+
+.img-stretch {
+  width: 100%;
+  width: -moz-available;
+  width: -webkit-fill-available;
+  width: stretch;
+}
